[gd_scene load_steps=3 format=3 uid="uid://356tvlvbsi6e"]

[ext_resource type="Script" path="res://Combat_UI.gd" id="1_74y6n"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_bbouf"]
blend_mode = 3

[node name="UIHolder" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_74y6n")

[node name="TurnQueue" type="PanelContainer" parent="."]
texture_filter = 1
clip_contents = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_top = 33.0
offset_right = 320.0
offset_bottom = 97.0
grow_horizontal = 2

[node name="Queue" type="HBoxContainer" parent="TurnQueue"]
clip_contents = true
custom_minimum_size = Vector2(64, 64)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
alignment = 1

[node name="StatusHolder" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -467.0
offset_top = -165.0
offset_right = 45.095
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 100

[node name="CombatInfo" type="PanelContainer" parent="."]
self_modulate = Color(0, 0, 0, 1)
material = SubResource("CanvasItemMaterial_bbouf")
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 919.0
offset_top = -165.0
offset_right = 1256.0
offset_bottom = -21.0
grow_vertical = 0

[node name="Text" type="RichTextLabel" parent="CombatInfo"]
layout_mode = 2
bbcode_enabled = true
scroll_following = true
shortcut_keys_enabled = false
